# qux

./: CMakeLists.txt  qux.c  qux.h  qux.rc.in
.github/workflows/: ci.yml
